Possible iOS fix? Prefixed backface-visibility

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
   opacity: 0;
 }
 /*
-  source: ###
+  source: https://davidwalsh.name/css-flip
 */
 /* entire container, keeps perspective */
 .flip-container {
@@ -32,6 +32,7 @@
 /* hide back of pane during swap */
 .front, .back {
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 
   position: absolute;
   top: 0;
